# swag

./: README.md
backend/: .env  cv_model.py  image_adder_and_cropper.py  image_stitcher.py  pyproject.toml  run_server.sh  server.py
frontend/extension/: index.html  manifest.json  package-lock.json  package.json  vite.config.js
frontend/extension/src/: App.jsx  WebcamCapture.jsx  index.css  popup.js
