[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python==4.8.0.74",
    "inference==0.13.0",
    "python-dotenv==1.0.0",
    "flask==2.0.3",
    "flask-cors==3.0.10",
    "werkzeug==2.0.3",
    "stitching>=0.6.1",
]
