[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datetime>=5.5",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "inference==0.13.0",
    "opencv-python==4.8.0.74",
    "opencv-python-headless==4.8.0.76",
    "stitching>=0.6.1",
]
